# naque

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/naque/: Cargo.toml
crates/naque-core/: Cargo.toml
crates/naque-core/src/: classify.rs  gate.rs  lib.rs  permission.rs
crates/naque-db/: Cargo.toml
crates/naque-db/src/: conn.rs  database.rs  engine.rs  error.rs  lib.rs  result.rs
crates/naque-db/tests/: postgres_integration.rs  sqlite_integration.rs
crates/naque-llm/: Cargo.toml
crates/naque-llm/src/: agent.rs  error.rs  lib.rs  mock.rs  observer.rs  provider.rs  streaming.rs  tests.rs  tools.rs  types.rs
crates/naque-llm/src/providers/: claude.rs  gemini.rs  hf.rs  mod.rs  ollama.rs  openai.rs  tests.rs
crates/naque-profile/: Cargo.toml
crates/naque-profile/src/: config.rs  credscan.rs  discovery.rs  error.rs  file.rs  lib.rs  profile.rs  profile_store.rs  resolve.rs  secrets.rs  store.rs
crates/naque-schema/: Cargo.toml
crates/naque-schema/src/: cache.rs  context_doc.rs  error.rs  introspect.rs  lib.rs  model.rs  render.rs
crates/naque-schema/tests/: introspect_postgres.rs  introspect_sqlite.rs
crates/naque-sql/: Cargo.toml
crates/naque-sql/src/: lib.rs
crates/naque-tui/: Cargo.toml
crates/naque-tui/src/: activity.rs  approval.rs  bytes.rs  commands.rs  history.rs  input.rs  input_line.rs  lib.rs  logo.rs  markdown.rs  path_prompt.rs  picker.rs  result_table.rs  status_bar.rs  suggest.rs  theme.rs
crates/naque/examples/: drive.rs  render_demo.rs
crates/naque/src/: app.rs  approval.rs  cli.rs  executor.rs  fs_access.rs  help.rs  lib.rs  live.rs  main.rs  setup.rs  turn.rs  ui.rs  web.rs
crates/naque/tests/: startup_help.rs
