[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Assaf Vayner <assafvayner@gmail.com>"]
repository = "https://github.com/assafvayner/naque"
readme = "README.md"
publish = false

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
keyring = "3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlparser = "0.53"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
    "json",
    "bigdecimal",
    "ipnetwork",
    "mac_address",
    "bit-vec",
] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tokio-util = "0.7"
futures-util = "0.3"
crossterm = { version = "0.28", features = ["event-stream"] }
toml = "0.8"
urlencoding = "2"
