[package]
name = "naque-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Core domain types for naque: permission modes, statement classification, and the query permission gate"
keywords = ["sql", "database", "permissions", "naque"]
categories = ["database"]

[dependencies]
thiserror.workspace = true
