[package]
name = "naque-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
naque-core = { path = "../naque-core" }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "sqlite",
    "chrono",
    "uuid",
    "json",
    "bigdecimal",
] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
