[package]
name = "naque-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Postgres/SQLite execution layer for naque with defense-in-depth read-only enforcement"
keywords = ["sql", "postgres", "sqlite", "database", "naque"]
categories = ["database"]

[dependencies]
naque-core = { path = "../naque-core" }
sqlx.workspace = true
tokio.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
