[package]
name = "naque-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "LLM provider abstraction and agent loop for naque"
keywords = ["llm", "ai", "agent", "openai", "naque"]
categories = ["api-bindings"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
