[package]
name = "naque-profile"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
naque-core = { path = "../naque-core" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror.workspace = true
dirs = "5"
keyring = "3"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
naque-db = { path = "../naque-db" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
