[package]
name = "naque-profile"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
naque-core = { path = "../naque-core" }
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
dirs.workspace = true
keyring.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tempfile.workspace = true
naque-db = { path = "../naque-db" }
tokio.workspace = true
