[package]
name = "naque-profile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Config, profile, and credential resolution for naque"
keywords = ["config", "profile", "toml", "naque"]
categories = ["config"]

[dependencies]
naque-core = { path = "../naque-core" }
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
dirs.workspace = true
keyring.workspace = true
urlencoding.workspace = true
url = "2.5"

[dev-dependencies]
tempfile.workspace = true
naque-db = { path = "../naque-db" }
tokio.workspace = true
