[package]
name = "naque-schema"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
naque-db = { path = "../naque-db" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
naque-db = { path = "../naque-db" }
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
