[package]
name = "naque-schema"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
naque-db = { path = "../naque-db" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
naque-db = { path = "../naque-db" }
tempfile.workspace = true
tokio = { workspace = true, features = ["sync"] }
