[package]
name = "naque-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Database schema learning, caching, and drift detection for naque"
keywords = ["sql", "schema", "introspection", "database", "naque"]
categories = ["database"]

[dependencies]
naque-db = { path = "../naque-db" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
naque-db = { path = "../naque-db" }
tempfile.workspace = true
tokio = { workspace = true, features = ["sync"] }
