[package]
name = "naque-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "SQL statement parsing and read/write/catastrophic classification for naque"
keywords = ["sql", "sqlparser", "classification", "naque"]
categories = ["parser-implementations", "database"]

[dependencies]
naque-core = { path = "../naque-core" }
sqlparser.workspace = true
