[package]
name = "naque-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "ratatui-based terminal UI components for naque"
keywords = ["tui", "ratatui", "terminal", "naque"]
categories = ["command-line-interface"]

[dependencies]
naque-core = { path = "../naque-core" }
ratatui.workspace = true
serde_json.workspace = true
