[package]
name = "naque"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "naque"
path = "src/lib.rs"

[[bin]]
name = "naque"
path = "src/main.rs"

[dependencies]
naque-core    = { path = "../naque-core" }
naque-sql     = { path = "../naque-sql" }
naque-db      = { path = "../naque-db" }
naque-schema  = { path = "../naque-schema" }
naque-llm     = { path = "../naque-llm" }
naque-tui     = { path = "../naque-tui" }
naque-profile = { path = "../naque-profile" }
async-trait   = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
clap          = { workspace = true }
ratatui       = { workspace = true }
anyhow        = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
serde_json  = { workspace = true }
