[package]
name = "naque"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
publish.workspace = true
description = "Agentic AI query tool over databases — natural-language to SQL in your terminal, with a hard read-only safety boundary"
keywords = ["sql", "database", "ai", "agent", "tui"]
categories = ["command-line-utilities", "database"]

[lib]
name = "naque"
path = "src/lib.rs"

[[bin]]
name = "naque"
path = "src/main.rs"

[dependencies]
naque-core    = { path = "../naque-core" }
naque-sql     = { path = "../naque-sql" }
naque-db      = { path = "../naque-db" }
naque-schema  = { path = "../naque-schema" }
naque-llm     = { path = "../naque-llm" }
naque-tui     = { path = "../naque-tui" }
naque-profile = { path = "../naque-profile" }
async-trait   = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tokio-util    = { workspace = true }
clap          = { workspace = true }
ratatui       = { workspace = true }
crossterm     = { workspace = true }
futures-util  = { workspace = true }
anyhow        = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true, features = ["test-util"] }
